--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lib-flexible": "^0.3.2",
     "px2rem-loader": "^0.1.9",
     "vue": "^2.5.2",
-    "vue-axios": "^2.1.5"
+    "vue-axios": "^2.1.5",
+    "vue-seamless-scroll": "^1.1.21"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
